--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,1 +1,100 @@
 @charset "UTF-8";
+
+
+* {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+}
+
+:root {
+    --verde: #49a09d;
+    --lilás: #5f2c82;
+}
+
+html, body {
+    background-color: var(--lilás);
+    height: 100vh;
+    width: 100vw;
+}
+
+main {
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+}
+
+section#login {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    overflow: hidden;  /*esconde tudo q está fora da borda*/
+
+    background-color: white;
+    width: 250px;
+    height: 515px;
+    border-radius: 20px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.521);
+}
+
+section#login > div#imagem {
+    background: #602c82d5 url(../imagens/imgmetal.jpg);
+    height: 200px;
+    background-size: cover;
+    background-position: center center;
+}
+
+div#formulario > h1 {
+    text-align: center;
+    padding: 10px;
+}
+
+div#formulario > p {
+    text-align: justify;
+    text-indent: 10px;
+    padding: 5px;
+}
+
+.material-symbols-outlined {
+    font-variation-settings:
+    'FILL' 0,
+    'wght' 400,
+    'GRAD' 0,
+    'opsz' 48
+  }
+
+.enviar {
+    display: block;
+    margin: auto;
+    margin-top: 5px;
+    color: white;
+    background-color: #49a09d;
+    border: 1px solid;
+    font-size: 1em;
+    padding: 10px;
+    width: 230px;
+    border-radius: 5px;
+}
+
+.enviar:hover {
+    background-color: #1d5857;
+}
+
+.redefinir {
+    display: block;
+    margin: auto;
+    margin-top: 5px;
+    color: #1d5857;
+    background-color: white;
+    border: 1px solid;
+    font-size: 1em;
+    padding: 10px;
+    width: 230px;
+    border-radius: 5px;
+}
+
+.redefinir:hover {
+    background-color: #49a09d6e;
+}
