--- a/estilos/style.css
+++ b/estilos/style.css
@@ -33,8 +33,8 @@ section#login {
     overflow: hidden;  /*esconde tudo q está fora da borda*/
 
     background-color: white;
-    width: 250px;
-    height: 515px;
+    width: 255px;
+    height: 525px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.521);
 }
@@ -57,13 +57,20 @@ div#formulario > p {
     padding: 5px;
 }
 
-.material-symbols-outlined {
-    font-variation-settings:
-    'FILL' 0,
-    'wght' 400,
-    'GRAD' 0,
-    'opsz' 48
-  }
+label {
+    display: none;
+}
+
+input.form {
+    display: block;
+    margin: auto;
+    margin-bottom: 2px;
+    background-color: #49a09d81;
+    border: none;
+    padding: 10px;
+    width: 150px;
+    border-radius: 5px;
+}
 
 .enviar {
     display: block;
