--- a/estilos/style.css
+++ b/estilos/style.css
@@ -37,13 +37,21 @@ section#login {
     height: 525px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.521);
+
+    transition: width 0.3s, height 0.3s;
+    transition-timing-function: ease;
 }
 
 section#login > div#imagem {
+    display: block;
     background: #602c82d5 url(../imagens/imgmetal.jpg);
     height: 200px;
     background-size: cover;
     background-position: center center;
+}
+
+div#formulario {
+    display: block;
 }
 
 div#formulario > h1 {
