novas caracteristicas do projeto login

--- a/estilos/mediaquery.css
+++ b/estilos/mediaquery.css
@@ -12,6 +12,10 @@
         width: 90vw;
     }
 
+    div#formulario > p {
+        font-size: 1em;
+    }
+
     section#login > div#imagem {
         float: left;
         width: 30%;
@@ -29,6 +33,10 @@
 
     body {
         background-image: linear-gradient(to top, #49a09d, #5f2c82);
+    }
+
+    div#formulario > p {
+        font-size: 1em;
     }
 
     section#login {
