--- a/estilos/style.css
+++ b/estilos/style.css
@@ -51,17 +51,71 @@ section#login > div#imagem {
 }
 
 div#formulario {
+    padding: 10px;
     display: block;
 }
 
 div#formulario > h1 {
     text-align: center;
-    padding: 10px;
+    margin-bottom: 10px;
 }
 
 div#formulario > p {
-    text-align: center;
     text-indent: 10px;
+    font-size: 0.8em;
+}
+
+form > div.campo {
+    background-color: #5f2c82;
+    width: 100%;
+    height: 40px;
+    display: block;
+    border-radius: 5px;
+    margin: 5px 0px;
+
+}
+
+form label {
+    display: none;
+}
+
+form > input[type=submit] {
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color: #49a09d;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition-duration: 0.3s;
+}
+
+form > input[type=submit]:hover {
+    background-color: #266664;
+}
+
+form > a.botao {
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    padding-top: 7px;
+    margin-top: 5px;
+    border: 1px solid #49a09d;
+    border-radius: 5px;
+    text-decoration: none;
+    color: #245755;
+    transition-duration: 0.3s;
+}
+
+form > a.botao:hover {
+    background-color: #49a09d83;
+}
+
+form > a.botao > i {
     font-size: 0.8em;
 }
 
@@ -77,36 +131,3 @@ input.form {
     border-radius: 5px;
 }
 */
-.enviar {
-    display: block;
-    margin: auto;
-    margin-top: 5px;
-    color: white;
-    background-color: #49a09d;
-    border: 1px solid;
-    font-size: 1em;
-    padding: 10px;
-    width: 230px;
-    border-radius: 5px;
-}
-
-.enviar:hover {
-    background-color: #1d5857;
-}
-
-.redefinir {
-    display: block;
-    margin: auto;
-    margin-top: 5px;
-    color: #1d5857;
-    background-color: white;
-    border: 1px solid;
-    font-size: 1em;
-    padding: 10px;
-    width: 230px;
-    border-radius: 5px;
-}
-
-.redefinir:hover {
-    background-color: #49a09d6e;
-}
