--- a/estilos/style.css
+++ b/estilos/style.css
@@ -85,7 +85,7 @@ div.campo > i {
 }
 
 div.campo > input {
-    background-color: #94dddb;
+    background-color: #caeceb;
     font-size: 1em;
     width: calc(100% - 45px);
     height: 100%;
